# resource_monitor

./: .gitignore  CMakeLists.txt  Makefile  Makefile.dev  Makefile.local  Makefile.macos  README.md  README_MAKEFILE.md  README_updated.md  affinity_examples.md  agent_config.json  agent_id.txt  api.md  build.sh  build_with_make.sh  deployment_test.sh  http_server_api_list.md  manager_config.json  resource_monitor.db  setup_agent_service.sh  setup_manager_service.sh  task_api_documentation.md  test.sh  test_task_api.sh  todo.md  update_agent_to_board.md  用户手册.md
ansible_dtagent/: README.md  install_agent.yml  inventory.ini  setup_ssh_keys.sh
ansible_dtagent/templates/: dtagent.service.j2
docs/: agent-manager-20250530-v1.1.md  api.md  system_architecture.md  task_api_documentation.md
docs/deployment/: deployment_architecture.md
src/: agent_main.cpp  manager_main.cpp
src/agent/: agent.cpp  agent.h  binary_manager.cpp  binary_manager.h  component_manager.cpp  component_manager.h  cpu_collector.cpp  cpu_collector.h  dir_utils.h  disk_collector.cpp  disk_collector.h  docker_collector.cpp  docker_collector.h  docker_manager.cpp  docker_manager.h  http_client.cpp  http_client.h  memory_collector.cpp  memory_collector.h  network_collector.cpp  network_collector.h  node_controller.cpp  node_controller.h  resource_collector.h  sftp_client.cpp  sftp_client.h
src/manager/: agent_control_manager.cpp  agent_control_manager.h  business_manager.cpp  business_manager.h  business_manager_template.cpp  database_manager.cpp  database_manager.h  database_manager_business.cpp  database_manager_chassis.cpp  database_manager_metric.cpp  database_manager_node.cpp  database_manager_template.cpp  http_server.cpp  http_server.h  http_server_business.cpp  http_server_chassis.cpp  http_server_node.cpp  http_server_task.cpp  http_server_template.cpp  manager.cpp  manager.h  multicast_announcer.cpp  multicast_announcer.h  scheduler.cpp  scheduler.h  sftp_server.cpp  sftp_server.h
src/utils/: logger.cpp  logger.h
test/: build.sh  sleep  sleep.cpp  test_result.md  test_task_api.sh
web/: index.html  test.html
